--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "version": 2
+  "version": 2,
+  "crons": [
+    {
+      "path": "/api/cron/update-tokens",
+      "schedule": "0 6 * * *"
+    }
+  ]
 }
